objects/Object__c.object
<CustomObject>
    <fields>
        <fullName>API_Name__c</fullName>
        <label>API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Description__c</fullName>
        <description>What is changed in the controller.</description>
        <label>Change Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Changed_By__c</fullName>
        <description>Who has updated the controller.</description>
        <label>Changed By</label>
        <picklist>
            <picklistValues>
                <fullName>Deep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nitesh</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It consists of user story, change request, ticket which impacts the components.</description>
        <label>Request</label>
        <referenceTo>Requirement__c</referenceTo>
        <relationshipLabel>Objects</relationshipLabel>
        <relationshipName>Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Object</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>API_Name__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Object Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>